added USERNAME, APIKEY; refined
